# ldvh-companion

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
src/: main.py
src/ldvh_companion/: __init__.py  api.py  config.py  database.py  models.py  utils.py
src/ldvh_companion/static/css/: custom.css
src/ldvh_companion/templates/: adventure_sheet_game.html  adventure_sheets.html  base.html  books.html  index.html  series.html
tests/: __init__.py  test_utils.py
